--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: ^2.1.3
   shared_preferences: ^0.5.6
+  image_picker: ^0.6.3+1
+  google_maps_flutter: ^0.5.21+15
 
 dev_dependencies:
   flutter_test:
