--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,6 +51,10 @@
     
     <key>io.flutter.embedded_views_preview</key>
     <true/>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app requires access to you location for EWTC Tutorail</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app requires access to you location for EWTC Tutorail</string>
     
 </dict>
 </plist>
