--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^0.5.6
   image_picker: ^0.6.3+1
   google_maps_flutter: ^0.5.21+15
+  location: ^2.3.5
 
 dev_dependencies:
   flutter_test:
